fix(images): stop images overflowing parent container

--- a/assets/src/css/main.css
+++ b/assets/src/css/main.css
@@ -503,6 +503,12 @@ picture {
 .pink-box {
   background-color: #bf4385; }
 
+.element-expand {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1; }
+
 .full-width-box {
   margin: 1.333em 0;
   float: left;
@@ -761,7 +767,8 @@ picture {
         margin-right: 0; } }
 
 .image-box-wrapper {
-  padding: 0; }
+  padding: 0;
+  overflow: hidden; }
   .image-box-wrapper img {
     -o-object-fit: cover;
        object-fit: cover;
@@ -1702,7 +1709,7 @@ html, body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100% !important; }
+    height: 100%; }
 
 .contact {
   float: left;
